--- a/mNet/ApproveReject.storyboard
+++ b/mNet/ApproveReject.storyboard
@@ -119,7 +119,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="780"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="96d-JL-he6">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="660.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="719.5"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Document Type" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sVQ-At-fyO" customClass="CustomBrownTextColorLabel" customModule="mNet" customModuleProvider="target">
                                                 <rect key="frame" x="27" y="24" width="104" height="17"/>
@@ -182,19 +182,19 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="-" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ESc-fu-bZ6" customClass="CustomBrownTextColorLabel" customModule="mNet" customModuleProvider="target">
-                                                <rect key="frame" x="27" y="411" width="316" height="17"/>
+                                                <rect key="frame" x="27" y="470" width="316" height="17"/>
                                                 <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="14"/>
                                                 <color key="textColor" red="0.3803921569" green="0.28235294119999998" blue="0.22352941179999999" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PEOPLE" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9TK-TO-efu" customClass="CustomBlueTextColorLabel" customModule="mNet" customModuleProvider="target">
-                                                <rect key="frame" x="27" y="493" width="64.5" height="19.5"/>
+                                                <rect key="frame" x="27" y="552" width="64.5" height="19.5"/>
                                                 <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="16"/>
                                                 <color key="textColor" red="0.2901960784" green="0.56470588239999997" blue="0.8862745098" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zLf-lG-rDs">
-                                                <rect key="frame" x="27" y="528.5" width="332" height="116"/>
+                                                <rect key="frame" x="27" y="587.5" width="332" height="116"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fnI-0k-N1G" customClass="CustomBrownTextColorLabel" customModule="mNet" customModuleProvider="target">
                                                         <rect key="frame" x="0.0" y="0.0" width="100" height="18"/>
@@ -332,13 +332,25 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="-" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="628-xt-XVo" customClass="CustomBrownTextColorLabel" customModule="mNet" customModuleProvider="target">
-                                                <rect key="frame" x="27" y="378" width="316" height="17"/>
+                                                <rect key="frame" x="27" y="437" width="316" height="17"/>
                                                 <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="14"/>
                                                 <color key="textColor" red="0.3803921569" green="0.28235294119999998" blue="0.22352941179999999" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="-" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mXg-FQ-yg5" customClass="CustomBrownTextColorLabel" customModule="mNet" customModuleProvider="target">
-                                                <rect key="frame" x="27" y="444" width="316" height="17"/>
+                                                <rect key="frame" x="27" y="503" width="316" height="17"/>
+                                                <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="14"/>
+                                                <color key="textColor" red="0.3803921569" green="0.28235294119999998" blue="0.22352941179999999" alpha="1" colorSpace="calibratedRGB"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Brand" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D59-xW-rdv" customClass="CustomBrownTextColorLabel" customModule="mNet" customModuleProvider="target">
+                                                <rect key="frame" x="27" y="378" width="40.5" height="17"/>
+                                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="14"/>
+                                                <color key="textColor" red="0.3803921569" green="0.28235294119999998" blue="0.22352941179999999" alpha="1" colorSpace="calibratedRGB"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="-" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bfc-Yx-kGp" customClass="CustomBrownTextColorLabel" customModule="mNet" customModuleProvider="target">
+                                                <rect key="frame" x="27" y="404" width="5.5" height="17"/>
                                                 <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="14"/>
                                                 <color key="textColor" red="0.3803921569" green="0.28235294119999998" blue="0.22352941179999999" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
@@ -353,14 +365,15 @@
                                             <constraint firstItem="Rb8-Ul-WDb" firstAttribute="leading" secondItem="Kie-Ow-Ayd" secondAttribute="leading" id="476-lM-VYY"/>
                                             <constraint firstItem="ESc-fu-bZ6" firstAttribute="trailing" secondItem="mXg-FQ-yg5" secondAttribute="trailing" id="47h-W2-FBu"/>
                                             <constraint firstItem="LGl-h4-AWG" firstAttribute="trailing" secondItem="ESc-fu-bZ6" secondAttribute="trailing" id="48R-Xk-m9K"/>
-                                            <constraint firstItem="628-xt-XVo" firstAttribute="top" secondItem="6jS-iX-Xag" secondAttribute="bottom" constant="16" id="68i-g7-FgQ"/>
                                             <constraint firstItem="628-xt-XVo" firstAttribute="leading" secondItem="9ud-C5-BhQ" secondAttribute="leading" id="6UO-aM-qg5"/>
                                             <constraint firstAttribute="trailing" secondItem="zLf-lG-rDs" secondAttribute="trailing" constant="16" id="7X2-BO-GQ8"/>
                                             <constraint firstItem="6Fy-1S-Th7" firstAttribute="leading" secondItem="sVQ-At-fyO" secondAttribute="leading" id="8UK-AM-4QW"/>
                                             <constraint firstItem="Zh3-bG-TJ3" firstAttribute="trailing" secondItem="gVZ-kv-ekc" secondAttribute="trailing" id="9w4-JB-RPm"/>
                                             <constraint firstItem="zLf-lG-rDs" firstAttribute="leading" secondItem="9TK-TO-efu" secondAttribute="leading" id="B1A-oe-WMv"/>
                                             <constraint firstItem="7Hz-Rx-B5m" firstAttribute="top" secondItem="5Qv-Zg-zlT" secondAttribute="bottom" constant="9" id="BkH-uF-uTb"/>
+                                            <constraint firstItem="bfc-Yx-kGp" firstAttribute="leading" secondItem="D59-xW-rdv" secondAttribute="leading" id="CcU-04-oir"/>
                                             <constraint firstItem="sVQ-At-fyO" firstAttribute="leading" secondItem="96d-JL-he6" secondAttribute="leading" constant="27" id="Ep0-hA-zxe"/>
+                                            <constraint firstItem="D59-xW-rdv" firstAttribute="top" secondItem="6jS-iX-Xag" secondAttribute="bottom" constant="16" id="Er9-Qb-tn1"/>
                                             <constraint firstItem="Kie-Ow-Ayd" firstAttribute="leading" secondItem="sVQ-At-fyO" secondAttribute="leading" id="GgU-TR-035"/>
                                             <constraint firstItem="5Qv-Zg-zlT" firstAttribute="leading" secondItem="sVQ-At-fyO" secondAttribute="leading" id="Hz0-8j-Qlx"/>
                                             <constraint firstItem="ESc-fu-bZ6" firstAttribute="top" secondItem="628-xt-XVo" secondAttribute="bottom" constant="16" id="Iz5-gq-qmE"/>
@@ -369,6 +382,7 @@
                                             <constraint firstItem="gVZ-kv-ekc" firstAttribute="top" secondItem="Rb8-Ul-WDb" secondAttribute="bottom" constant="9" id="POc-iZ-jyB"/>
                                             <constraint firstItem="9ud-C5-BhQ" firstAttribute="top" secondItem="LGl-h4-AWG" secondAttribute="bottom" constant="16" id="Q2m-5b-qiu"/>
                                             <constraint firstItem="zLf-lG-rDs" firstAttribute="top" secondItem="9TK-TO-efu" secondAttribute="bottom" constant="16" id="QCO-aU-u7i"/>
+                                            <constraint firstItem="628-xt-XVo" firstAttribute="top" secondItem="bfc-Yx-kGp" secondAttribute="bottom" constant="16" id="RrK-ga-H0c"/>
                                             <constraint firstItem="ESc-fu-bZ6" firstAttribute="leading" secondItem="sVQ-At-fyO" secondAttribute="leading" id="S4Z-ut-rnl"/>
                                             <constraint firstItem="Rb8-Ul-WDb" firstAttribute="top" secondItem="Zh3-bG-TJ3" secondAttribute="bottom" constant="16" id="SN6-73-SAp"/>
                                             <constraint firstItem="9TK-TO-efu" firstAttribute="leading" secondItem="sVQ-At-fyO" secondAttribute="leading" id="X37-nH-3AD"/>
@@ -377,6 +391,8 @@
                                             <constraint firstItem="gVZ-kv-ekc" firstAttribute="leading" secondItem="Rb8-Ul-WDb" secondAttribute="leading" id="XuZ-5U-Zpa"/>
                                             <constraint firstItem="sVQ-At-fyO" firstAttribute="top" secondItem="96d-JL-he6" secondAttribute="top" constant="24" id="Zaj-aK-hBM"/>
                                             <constraint firstItem="5Qv-Zg-zlT" firstAttribute="top" secondItem="gVZ-kv-ekc" secondAttribute="bottom" constant="16" id="Zat-80-9GJ"/>
+                                            <constraint firstItem="bfc-Yx-kGp" firstAttribute="top" secondItem="D59-xW-rdv" secondAttribute="bottom" constant="9" id="ZhH-9S-97h"/>
+                                            <constraint firstItem="D59-xW-rdv" firstAttribute="leading" secondItem="9ud-C5-BhQ" secondAttribute="leading" id="aDN-CN-IBa"/>
                                             <constraint firstItem="Zh3-bG-TJ3" firstAttribute="leading" secondItem="sVQ-At-fyO" secondAttribute="leading" id="bx1-Uc-jwG"/>
                                             <constraint firstItem="6jS-iX-Xag" firstAttribute="top" secondItem="9ud-C5-BhQ" secondAttribute="bottom" constant="9" id="c5w-Xu-cUe"/>
                                             <constraint firstAttribute="trailing" secondItem="mXg-FQ-yg5" secondAttribute="trailing" constant="32" id="cR0-Qf-cZg"/>
@@ -421,6 +437,8 @@
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                     <size key="freeformSize" width="375" height="780"/>
                     <connections>
+                        <outlet property="brandTitleLabel" destination="D59-xW-rdv" id="bJD-by-pz9"/>
+                        <outlet property="brandValueLabel" destination="bfc-Yx-kGp" id="qIm-ay-L79"/>
                         <outlet property="costCentreLabel" destination="mXg-FQ-yg5" id="wnW-BR-FIE"/>
                         <outlet property="descriptionLabel" destination="628-xt-XVo" id="XpW-hn-Mlc"/>
                         <outlet property="documentAmountLabel" destination="LGl-h4-AWG" id="LPR-E7-zej"/>
@@ -585,7 +603,7 @@
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="73" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Aka-mD-GkI">
-                                <rect key="frame" x="27.5" y="0.0" width="321" height="667"/>
+                                <rect key="frame" x="27" y="0.0" width="321" height="667"/>
                                 <color key="backgroundColor" red="0.96862745100000003" green="0.97254901959999995" blue="0.97647058819999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 <prototypes>
